--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@kangc/v-md-editor": "^1.7.11",
+    "babel-plugin-prismjs": "^2.1.0",
     "core-js": "^3.8.3",
     "vue": "^2.6.14"
   },
