--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@kangc/v-md-editor": "^1.7.11",
+    "axios": "^0.27.2",
     "babel-plugin-prismjs": "^2.1.0",
     "core-js": "^3.8.3",
     "vue": "^2.6.14"
