--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -28,7 +30,7 @@
     },
     "extends": [
       "plugin:vue/essential",
-      "eslint:recommended"
+      "/eslint:recommended"
     ],
     "parserOptions": {
       "parser": "@babel/eslint-parser"
