--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "babel-plugin-prismjs": "^2.1.0",
     "core-js": "^3.8.3",
+    "element-ui": "^2.15.9",
     "vue": "^2.6.14",
     "vue-router": "^3.5.4"
   },
