--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "babel-plugin-prismjs": "^2.1.0",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.9",
+    "node-sass": "^7.0.1",
+    "sass-loader": "^13.0.2",
     "vue": "^2.6.14",
     "vue-router": "^3.5.4"
   },
